<resources>
    <string name="app_name">SheduleApp</string>
    <string name="first_button">Расписание на день</string>
    <string name="second_button">Календарь на день</string>
    <string name="third_button">Домашние задания</string>
    <string name="time_start1">12:40</string>
    <string name="time_end1">14:00</string>
    <string name="subject1">Нейросетевые и нечеткие модели</string>
    <string name="type1">Практика</string>
    <string name="room1">Ауд. 149</string>
    <string name="teacher1">Городецкий Э. Р.</string>
    <string name="time_start2">14:10</string>
    <string name="time_end2">15:30</string>
    <string name="subject2">Информационная безопасность</string>
    <string name="type2">Практика</string>
    <string name="room2">Ауд. 149</string>
    <string name="teacher2">Шиян В. И.</string>
    <string name="tvTime">Время</string>
    <string name="tvSubject">Предмет</string>
    <string name="tvDate">8 сентября</string>
    <string name="time1">12:40\n14:00</string>
    <string name="time2">14:10\n15:30</string>
    <string name="time3">15:40\n17:00</string>
    <string name="time4">17:10\n18:30</string>
    <string name="calendar_subject1">НиН модели</string>
    <string name="calendar_subject2">ИБ</string>
    <string name="calendar_subject3">РЗиА</string>
    <string name="calendar_subject4">Тестирование</string>
    <string name="calendar_subject5">ПдМП</string>
</resources>