<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/buttonDay"
        android:gravity="center"
        android:text="@string/first_button"
        style="@style/ButtonStyle"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/buttonCalendar"
        android:gravity="center"
        android:text="@string/second_button"
        style="@style/ButtonStyle"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/buttonHomework"
        android:gravity="center"
        android:text="@string/third_button"
        style="@style/ButtonStyle"
        />
</LinearLayout>